--- a/team.html
+++ b/team.html
@@ -29,5 +29,14 @@ title: Team
 <li>藤村　良弘(Fujimura Yoshihiro), <a href="http://www.facebook.com/fujimura1969">Facebook:Fujimura Yoshihiro</a> (Policy Analyst)</li>
 </ul>
 
+<h2 class="page-header">江戸川区版作成</h2>
+
+<div class="row credits">
+  <div class="span8 offset4">
+
+<ul>
+<li>西沢　明(Akira Nishizawa)</li>
+</ul>
+
 </div>
 </div>
