--- a/team.html
+++ b/team.html
@@ -28,6 +28,8 @@ title: Team
 <li>西林　孝(Takashi Nishibayashi), <a href="http://twitter.com/hagino3000">@hagino3000</a> (Developer)</li>
 <li>藤村　良弘(Fujimura Yoshihiro), <a href="http://www.facebook.com/fujimura1969">Facebook:Fujimura Yoshihiro</a> (Policy Analyst)</li>
 </ul>
+</div>
+</div>
 
 <h2 class="page-header">江戸川区版作成</h2>
 
